// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter snapshot matches snapshot 1`] = `
<DocumentFragment>
  <div
    aria-label="Platform"
    class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-1qb8o-MuiToggleButtonGroup-root"
    role="group"
  >
    <button
      aria-pressed="true"
      class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeMedium MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-w4gp61-MuiButtonBase-root-MuiToggleButton-root"
      tabindex="0"
      type="button"
      value="cheap"
    >
      Самый дешевый
    </button>
    <button
      aria-pressed="false"
      class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeMedium MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-w4gp61-MuiButtonBase-root-MuiToggleButton-root"
      tabindex="0"
      type="button"
      value="speed"
    >
      Самый Быстрый
    </button>
  </div>
</DocumentFragment>
`;

exports[`Filter snapshot matches snapshot 2`] = `
<DocumentFragment>
  <div
    aria-label="Platform"
    class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-1qb8o-MuiToggleButtonGroup-root"
    role="group"
  >
    <button
      aria-pressed="true"
      class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeMedium MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-w4gp61-MuiButtonBase-root-MuiToggleButton-root"
      tabindex="0"
      type="button"
      value="cheap"
    >
      Самый дешевый
    </button>
    <button
      aria-pressed="false"
      class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeMedium MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-w4gp61-MuiButtonBase-root-MuiToggleButton-root"
      tabindex="0"
      type="button"
      value="speed"
    >
      Самый Быстрый
    </button>
  </div>
</DocumentFragment>
`;

exports[`SPINNER TEST 1`] = `
<button
  aria-pressed="false"
  class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeMedium MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-w4gp61-MuiButtonBase-root-MuiToggleButton-root"
  tabindex="0"
  type="button"
  value="cheap"
>
  Самый дешевый
</button>
`;

exports[`SPINNER TEST 2`] = `
<button
  aria-pressed="false"
  class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeMedium MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-w4gp61-MuiButtonBase-root-MuiToggleButton-root"
  tabindex="0"
  type="button"
  value="speed"
>
  Самый Быстрый
</button>
`;
